# rs-web-app

./: Cargo.toml  README.md
public/: index.css  index.mjs
src/: index.css  index.html  index.js  index.mjs  main.rs
